Added label to sections and subsections.

--- a/waves_theory.tex
+++ b/waves_theory.tex
@@ -1,4 +1,4 @@
-\section{Ocean Waves} 
+\section{Ocean Waves} \label{Ocean Waves} 
 This document presents a summary of the theory of ocean waves and is mainly 
 based on \cite{lewis1988principles}.
 
@@ -26,7 +26,7 @@ is also a wave system.  However, it should be noted that the assumption
 regarding the linear superimposability of waves fails when the wave system is
 too steep and wave breaking occurs.
 
-\subsection{Regular sea waves}
+\subsection{Regular sea waves} \label{Regular sea waves}
 
 A regular sea wave is a harmonic wave with crests that are infinitely long,
 parallel and equally spaced and having constant wave heights. The general 
@@ -146,7 +146,8 @@ Based on equation \ref{eq: variance for simple harmonic}, equation
   E = \rho g S(\omega)
 \end{equation}
 
-\subsection{Irregular sea and wave spectrum}
+\subsection{Irregular sea and wave spectrum} \label{Irregular sea and wave
+spectrum}
 
 Oceanographers have found that an irregular sea wave can be resolved into a sum
 of regular waves of various length and direction using Fourier Integral
@@ -240,12 +241,12 @@ where $S(\omega, \mu)$ is the function defining the directional spectrum such as
 the one shown in figure \ref{fig: directional spectrum}. The following section
 looks into various spectral families.
 
-\subsection{Idealized spectral families}
+\subsection{Idealized spectral families} \label{Idealized spectral families}
 
 This section describes three idealised point spectrum followed by a section
 which describes how to convert point spectrum into a directional spectrum.
 
-\subsubsection{Pierson-Moskowitz spectrum}
+\subsubsection{Pierson-Moskowitz spectrum} \label{Pierson-Moskowitz spectrum}
 This spectral form requires only one parameter, wind speed, as input and was
 developed primarily for oceanographic use. It is intended to represent point
 spectrum of a fully developed sea, that is fetch and duration are great, and
@@ -267,7 +268,7 @@ for extreme storm condition and is inappropriate for general use because it is
 based on the assumption of full developed sea state reached after an extended
 time period of steady wind with no contaminating swell. 
 
-\subsubsection{Bretschneider spectrum}
+\subsubsection{Bretschneider spectrum} \label{Bretschneider spectrum}
 This spectrum takes two input parameters - wave period and wave height. It has
 the form:
 \begin{equation}
@@ -296,7 +297,7 @@ are not known.
 $H_{\sfrac{1}{3}}$ is the significant wave height and $T_1$ is the time period;
 both are inputs.
 
-\subsubsection{JONSWAP spectrum}
+\subsubsection{JONSWAP spectrum} \label{JONSWAP spectrum}
 This spectral function takes two parameters as input - fetch and wind speed. The 
 preceding two spectrum models represent open-ocean wave conditions. However, 
 this might not always be the case where geographic boundaries limit the fetch in
@@ -336,6 +337,7 @@ frequency dependent factor (the $\gamma$ term).
 spectrum.
 
 \subsubsection{Converting point spectrum to directional spectrum}
+\label{Converting point spectrum to directional spectrum}
 According to \cite{stansberg2002specialist} even though there are several
 unidirectional spectral models, there are only a few multidirectional spectral
 models. But, for the multidirectional wave models that are available, the 
