Source added for images in waves_theory.tex. Introduction added for hydrodynmics.

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -15,9 +15,9 @@
 \usepackage{amsmath}
 \usepackage{xfrac}
 \usepackage{graphicx}
-%\usepackage{apacite}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage{caption}
 
 % Start each section in a new page
 \usepackage{titlesec}
@@ -37,6 +37,7 @@
 
 \input{waves_theory.tex}
 \input{waves_simulation.tex}
+\input{hydrodynamics.tex}
 
 % Breakpage and set bibliography
 \pagebreak
