--- a/documentation/waves_theory.tex
+++ b/documentation/waves_theory.tex
@@ -168,7 +168,7 @@ wave that consist of many component waves) is:
 \begin{figure}
   \centering
   \includegraphics[scale=0.5]{variance_spectrum.png}
-  \caption{Variance spectrum}
+  \caption{Example of variance spectrum from \cite{lewis1988principles}}
   \label{fig: variance spectrum}
 \end{figure}
 
@@ -217,7 +217,7 @@ obtained.
 \begin{figure}
   \centering
   \includegraphics[scale=0.35]{directional_spectrum.png}
-  \caption{Directional spectrum}
+  \caption{Example of directional spectrum from \cite{hughes2010ship}}
   \label{fig: directional spectrum}
 \end{figure}
 
