--- a/documentation/reference.bib
+++ b/documentation/reference.bib
@@ -1,3 +1,6 @@
+Naval Architecture
+==================
+
 @book{bhattacharyya1978dynamics,
   title={Dynamics of marine vehicles},
   author={Bhattacharyya, Rameswar},
@@ -16,6 +19,14 @@
   title={Ship structural analysis and design},
   author={Hughes, Owen F and Paik, Jeom Kee},
   year={2010}
+}
+
+@book{barltrop2013dynamics,
+  title={Dynamics of fixed marine structures},
+  author={Barltrop, Nigel DP and Adams, Adrian J},
+  volume={91},
+  year={2013},
+  publisher={Butterworth-Heinemann}
 }
 
 @article{stansberg2002specialist,
