Table of contents added.

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -26,7 +26,6 @@
 % Path to images directory
 \graphicspath{{images/}}
 
-
 %\title{Motion simulation of autonomous surface vehicle in irregular sea using
 %frequency domain analysis}
 %\author{Toby Thomas \small{(CEng, MBCS, MRINA)}}
@@ -34,6 +33,9 @@
 
 \begin{document}
 %\maketitle
+
+% Insert table of contents
+\tableofcontents
 
 \input{waves_theory.tex}
 \input{waves_simulation.tex}
