Add References to table of contents

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -42,7 +42,10 @@
 \input{hydrodynamics.tex}
 
 % Breakpage and set bibliography
-\pagebreak
+\clearpage
+% Add References to table of contents
+\addcontentsline{toc}{section}{References}
+% Add the references
 \bibliographystyle{ieeetr}
 \bibliography{reference}
 
