Motion simulation (partially complete)

--- a/documentation/hydrodynamics.tex
+++ b/documentation/hydrodynamics.tex
@@ -141,6 +141,7 @@ Froude-Krylov force on the hull can then be obtained as given below:
   \int_{\frac{-B}{2}}^{\frac{B}{2}} 
   \rho g \zeta_a e^{k z} \cos (k x - \omega t) 
   \,dx \,dy 
+  \label{eq: Froude-Krylov force}
 \end{equation}
 Since we consider each component motion separately, instead of considering the
 total pressure force, we consider the component of the pressure force acting in
@@ -153,6 +154,7 @@ force for heave is:
   \int_{\frac{-B}{2}}^{\frac{B}{2}} 
   \rho g \zeta_a e^{k z} \cos (k x - \omega t) \cos \phi 
   \,dx \,dy 
+  \label{eq: Froude-Krylov force for heave}
 \end{equation}  
 Similarly, for surge and sway motion (which are not harmonic motion) the
 Froude-Krylov force can be obtained by taking the component in each direction.
