--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -19,6 +19,9 @@
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage{caption}
 
+% Package for writing pseudo code
+\usepackage{algorithmic}
+
 % Start each section in a new page
 \usepackage{titlesec}
 \newcommand{\sectionbreak}{\clearpage}
@@ -40,6 +43,7 @@
 \input{waves_theory.tex}
 \input{waves_simulation.tex}
 \input{hydrodynamics.tex}
+\input{hydrodynamics_simulation.tex}
 
 % Breakpage and set bibliography
 \clearpage
