Minor text formating.

--- a/documentation/hydrodynamics_simulation.tex
+++ b/documentation/hydrodynamics_simulation.tex
@@ -65,7 +65,10 @@ coefficient.
 
 \subsection{Calculating response amplitude}
 \label{Calculating response amplitude}
-Response amplitude is calculated using equation \ref{eq: equation of motion} but instead of solving the equation of motion for each degree of freedom separately, we will use matrices to simultaneously solve the equations of motion for all degrees of freedom. 
+Response amplitude is calculated using equation \ref{eq: equation of motion} but
+instead of solving the equation of motion for each degree of freedom separately,
+we will use matrices to simultaneously solve the equations of motion for all
+degrees of freedom. 
 
 $M$ : Mass matrix
 \[
@@ -80,9 +83,11 @@ $M$ : Mass matrix
 \]
 where: \\
 $\Delta$ : is total mass of vessel \\
-$I_{44}, I_{55}, I_{66}$ : are moments of inertia around the longitudinal, transverse and vertical axis of the ASV. \\
+$I_{44}, I_{55}, I_{66}$ : are moments of inertia around the longitudinal,
+transverse and vertical axis of the ASV. \\
 $I_{46} = I_{64}$ : is roll - yaw product of inertia.\\
-$x_c, z_c$ : are the coordinates of centre of gravity of the ASV. The ASV is assumed to be transversely symmetric and hence $y_c = 0$
+$x_c, z_c$ : are the coordinates of centre of gravity of the ASV. The ASV is
+assumed to be transversely symmetric and hence $y_c = 0$
 
 $C$ : Damping matrix
 \[
